--- a/templates/books.hbs
+++ b/templates/books.hbs
@@ -1,4 +1,35 @@
-{{#each books}}
-  <h3>{{ title }}</h3>
-  <section>{{ type }}</section>
-{{/each}}
+
+<div class="row row-offcanvas row-offcanvas-right">
+
+        <div class="col-xs-12 col-sm-9">
+          <p class="pull-right visible-xs">
+            <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
+          </p>
+          <div class="jumbotron">
+            <h1>Book of Broken Promises</h1>
+
+            
+            
+          </div>
+
+
+          
+
+          {{#each this}}
+          <div class="row">
+            <div class="col-xs-6 col-lg-6">
+              <h3>{{title}}</h3>
+              <p>Synopsis: {{synopsis}} </p>
+              <p>Author: {{author}} </p>
+              <p>Booktype: {{booktype}} </p>
+              <p>Year: {{year}} </p>
+              <p>Publisher: {{publisher}} </p>
+              <p>Label: {{label}} </p>
+            
+          </div><!--/row-->
+          {{/each}}
+
+        </div><!--/.col-xs-12.col-sm-9-->
+
+        
+      </div><!--/row-->
